# Spiron

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  build.gradle  gradle.properties  settings.gradle
benchmark/: README.md  chaos-test-node-failures.sh  chaos-test-partial-recovery.sh  long-running-stability.sh  quick-stability-test.sh  run-benchmark.sh  run-real-chaos-test.sh  start-7node-4096d.sh  start-7node-cluster.sh
docs/: architecture-class-diagram.html  class-diagram.html  data-flow-sequence-diagrams.html  metrics.md  sequence-diagram.html
docs/benchmarks/: BENCHMARK_MODULAR_ARCHITECTURE.md  BENCHMARK_MODULAR_CORRECTED.md
docs/grafana/: spiron_dashboard.json
examples/: build.gradle
examples/src/main/java/com/spiron/: BenchmarkClient.java  EndToEndMetricsTest.java  SimpleTest.java
k8s/: spiron-service.yaml  spiron-statefulset.yaml
spiron-clients/spiron-java-client/: build.gradle  settings.gradle
spiron-clients/spiron-java-client/src/main/proto/: eddy.proto
spiron-clients/spiron-python-client/: README.md  pyproject.toml  setup.py
spiron-clients/spiron-python-client/examples/: async_example.py  basic_example.py  benchmark_client.py
spiron-clients/spiron-python-client/spiron/: __init__.py  client.py  eddy.py  exceptions.py
spiron-clients/spiron-python-client/tests/: conftest.py  test_client.py  test_integration.py
spiron-server/: Dockerfile  build.gradle  settings.gradle
spiron-server/src/main/java/com/spiron/: App.java
spiron-server/src/main/proto/: eddy.proto
spiron-server/src/main/resources/: application.properties
src/main/java/com/spiron/: App.java
src/main/java/com/spiron/api/: SpironAdmin.java  SpironClient.java  SpironClientLegacy.java  SpironClientV2.java  SpironServer.java  StateMachine.java
src/main/java/com/spiron/config/: BroadcastValidationConfig.java  SpironConfig.java
src/main/java/com/spiron/core/: EddyEngine.java  EddyMath.java  EddyState.java  EddyStateMachine.java  LineageTracker.java  SpironRaftLog.java
src/main/java/com/spiron/crdt/: GossipScheduler.java
src/main/java/com/spiron/di/: SpironComponent.java  SpironModule.java
src/main/proto/: eddy.proto
src/main/resources/: application.properties
(+91 files in other folders)
